--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #3500d3;
+$secondary-color: green;
 
-$white-color: #fff;
+$white-color:white;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
@@ -10,6 +10,6 @@ $light-grey: #d2d2d2;
 $dark-blue-text: #272341; // For Headings
 
 // FONT SIZE
-$default-font-size: 1.6rem;
+$default-font-size: 1.8rem;
 $big-font-size: 4rem;
-$mid-font-size: 2.5rem;
+$mid-font-size: 3rem;
